--------
v5.0-git
--------

[mms] Add checkbox interface to mailbox page for advanced mobile browsers
      (MIMP).
[mms] Add preference to allow viewing of all inline parts by default (MIMP).
[mms] Add hook to alter composed message details before sending.
[mms] DIMP now honors the 'allow_resume_all' configuration option.
[mms] Remove 'sort_limit' configuration option.
[mms] Mobile view no longer supports WML output.
[jan] Implement iTip viewer actions in DIMP (Request #8061).
[mms] Display alarm notifications in DIMP (Request #6232).
[mms] Auto-determine charset for text attachments (Bug #8858).
[mms] Remove IE 6 (and below) and Safari 2 (and below) support for DIMP.
[mms] Add chance to switch between forward options on compose page when using
      auto-forward (DIMP).
[mms] Add chance to switch reply type to single recipient on compose page when
      using auto-reply (DIMP).
[mms] Fix printing multipage HTML messages in Mozilla browsers (Bug #8708).
[mms] Provide command line script to obtain IMAP caching statistics.
[mms] Catch flag changes from other IMAP clients when refreshing if CONDSTORE
      is available on the IMAP server (DIMP).
[mms] Improved forwarding options.
[mms] Add support for LIST-STATUS IMAP extension; provides more efficient
      mailbox polling.
[mms] Add hook to allow determination of compose attachments MIME type.
[mms] Move AJAX processing framework to Horde (Request #4561).
[mms] If selected message(s) disappear from mailbox, gracefully handle in the
      user interface (DIMP).
[mms] Only update search mailbox on explicit user action (Request #7297)
      (DIMP).
[mms] Add auto-save draft to IMP (Request #7656).
[mms] Add keyboard shortcut to move to next unseen message (Request #8223).
[mms] Add hook to dynamically change mailbox label (Request #6734).
[mms] Improved address expansion in MIMP.
[mms] Load folders on-demand in sidebar (DIMP).
[mms] Add priority setting to DIMP.