@@ -91,6 +91,13 @@ foreach (array_keys($display_hdrs) as $val) {
     }
 }
 
+/* Add attachment. */
+if ($_SESSION['imp']['file_upload'] &&
+    !$imp_compose->addFilesFromUpload('upload_', $vars->a == _("Expand Names")) &&
+    ($vars->a != _("Expand Names"))) {
+    $vars->a = null;
+}
+
 /* Run through the action handlers. */
 switch ($vars->a) {
 // 'd' = draft
@@ -345,6 +352,19 @@ foreach ($display_hdrs as $key => $val) {
 
 $t->set('hdrs', $hdrs);
 $t->set('title', $title);
+
+/* Activate advanced compose attachments UI? */
+if ($_SESSION['imp']['file_upload']) {
+    try {
+        if (Horde::callHook('mimp_advanced', array('compose_attach'), 'imp')) {
+            $t->set('attach', true);
+            if ($atc_list = $imp_compose->getAttachments()) {
+                $imp_ui_mbox = new IMP_Ui_Mailbox();
+                $t->set('attach_data', sprintf("%s [%s] - %s", htmlspecialchars($atc_list[0]['part']->getName()), htmlspecialchars($atc_list[0]['part']->getType()), $imp_ui_mbox->getSize($atc_list[0]['part']->getBytes())));
+            }
+        }
+    } catch (Horde_Exception_HookNotSet $e) {}
+}
 
 require IMP_TEMPLATES . '/common-header.inc';
 IMP::status();
